SERVER-17820: Handle long running exitCleanly in Service Stop

(cherry picked from commit 7060c72b30a836b3052f7890ea8c4b592014adf4)